public class LRUEvictionPolicyFactory<K> implements EvictionPolicyFactory<K> {
    @Override
    public EvictionPolicy<K> createEvictionPolicy() {
        return new LRUEvictionPolicy<>();
    }
}